# DocuMind-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Agentic AI.txt
notebook/: Rag.ipynb
