[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "cohere>=5.21.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langsmith>=0.8.5",
    "pandas>=3.0.3",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.28",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.5.0",
    "structlog>=25.5.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "uvicorn>=0.47.0",
]
